--- a/Solved/solved.html
+++ b/Solved/solved.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trash</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="solved.css">
 </head>
 
 <body>
@@ -15,8 +15,8 @@
     </header>
 
     <figure class = "big-box">
-        <figcaption>An Image of Pb. <br>She has <em>spider eyes.</em></figcaption>
-        <img src = "pb.jpg">
+        <figcaption id = "image-caption">An Image of Pb. <br>She has <em>spider eyes.</em></figcaption>
+        <img id = "image" src = "pb.jpg">
     </figure>
 
     <article>
@@ -37,7 +37,6 @@
         Footer - 
         Copyright 2021
     </footer>
-
 </body>
 
 </html>
